data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1442.wast
;; 3. **Conditional Branch with Insufficient Operands**:    - **Description**: Utilize a `br_if` instruction in a block where there are insufficient operands on the stack to meet the target block's requirements. Verify if `wizard_engine` and WASM implementation react differently.    - **Constraint Checked**: Operands needed before branching via `br_if`.    - **Relation to Stack Corruption**: Tests if inadequate operands lead to stack corruption or inconsistency.

(assert_invalid
  (module
    (func $insufficient-operands
      (block (result i32)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)